--- a/index.texi
+++ b/index.texi
@@ -1,8 +1,8 @@
-@setfilename ../info/index
+@c -*-texinfo-*-
 
 @c Indexing guidelines
 
-@c I assume that all indexes will be combinded.
+@c I assume that all indexes will be combined.
 @c Therefore, if a generated findex and permutations
 @c cover the ways an index user would look up the entry,
 @c then no cindex is added.
@@ -18,21 +18,9 @@
 
 @c pindex is used for .el files and Unix programs
 
-@node Index, New Symbols, Standard Hooks, Top
+@node Index
 @unnumbered Index
-
-
-All variables, functions, keys, programs, files, and concepts are
-in this one index.  
-
-All names and concepts are permuted, so they appear several times, one
-for each permutation of the parts of the name.  For example,
-@code{function-name} would appear as @b{function-name} and @b{name,
-function-}.
-
 
 @c Print the indices
 
 @printindex fn
-
-
