--- a/maps.texi
+++ b/maps.texi
@@ -1,255 +1,197 @@
 @c -*-texinfo-*-
 @c This is part of the GNU Emacs Lisp Reference Manual.
-@c Copyright (C) 1990, 1991, 1992, 1993 Free Software Foundation, Inc. 
+@c Copyright (C) 1990-1993, 1999, 2001-2013 Free Software Foundation,
+@c Inc.
 @c See the file elisp.texi for copying conditions.
-@setfilename ../info/maps
-@node Standard Keymaps, Standard Hooks, Standard Buffer-Local Variables, Top
-@c @appendix Standard Keymaps
+@node Standard Keymaps
 @appendix 標準のキーマップ
+@cindex keymaps, standard
 
-@c The following symbols are used as the names for various keymaps.
-@c Some of these exist when Emacs is first started, others are
-@c loaded only when their respective mode is used.  This is not
-@c an exhaustive list.
-以下のシンボルは、さまざまなキーマップの名前として使われています。
-これらの一部はEmacsの始動時に存在しますが、
-他のものは関連するモードを使ったときにのみロードされます。
-以下は、完全な一覧ではありません。
+以下のシンボルは、さまざまなキーマップの名前として使われています。これら
+の一部はEmacsの始動時に存在しますが、他のものは関連するモードを使ったとき
+にのみロードされます。以下は、完全な一覧ではありません。
 
-@c Almost all of these maps are used as local maps.  Indeed, of the modes
-@c that presently exist, only Vip mode and Terminal mode ever change the
-@c global keymap.
-これらのマップのほとんどすべては、ローカルマップとして使われます。
-もちろん、存在するモードの中で、グローバルキーマップを変更するのは
-Vipモードと端末（terminal）モードだけです。
+これらのマップのほとんどすべては、ローカルマップとして使われます。もちろ
+ん、存在するモードの中で、グローバルキーマップを変更するのはVipモードと端
+末（terminal）モードだけです。
 
+@c Don't list individual major mode keymaps here, only more general things.
+@c Only add vindex for things not covered elsewhere in this manual.
+@c Don't add xrefs to things covered in {Keymaps}.
 @table @code
-@item Buffer-menu-mode-map
-@vindex Buffer-menu-mode-map
-@c A full keymap used by Buffer Menu mode.
-バッファメニュー（buffer-menu）モードで使う完全なキーマップ。
+@item 2C-mode-map
+A sparse keymap for subcommands of the prefix @kbd{C-x 6}.@*
+@xref{Two-Column,, Two-Column Editing, emacs, The GNU Emacs Manual}.
 
-@item c-mode-map
-@vindex c-mode-map
-@c A sparse keymap used by C mode.
-Cモードで使う疎なキーマップ。
+@item abbrev-map
+@vindex abbrev-map
+A sparse keymap for subcommands of the prefix @kbd{C-x a}.@*
+@xref{Defining Abbrevs,,, emacs, The GNU Emacs Manual}.
 
-@item command-history-map
-@vindex command-history-map
-@c A full keymap used by Command History mode.
-コマンド履歴（command-history）モードで使う完全なキーマップ。
+@item button-buffer-map
+A sparse keymap useful for buffers containing buffers.@*
+You may want to use this as a parent keymap.  @xref{Buttons}.
+
+@item button-map
+A sparse keymap used by buttons.
 
 @item ctl-x-4-map
-@c A sparse keymap for subcommands of the prefix @kbd{C-x 4}.
 プレフィックス@kbd{C-x 4}の下位コマンド用の疎なキーマップ。
 
 @item ctl-x-5-map
-@c A sparse keymap for subcommands of the prefix @kbd{C-x 5}.
 プレフィックス@kbd{C-x 5}の下位コマンド用の疎なキーマップ。
 
 @item ctl-x-map
-@c A full keymap for @kbd{C-x} commands.
 @kbd{C-x}コマンド用の完全なキーマップ。
 
-@item debugger-mode-map
-@vindex debugger-mode-map
-@c A full keymap used by Debugger mode.
-デバッガモードで使う完全なキーマップ。
+@item ctl-x-r-map
+@vindex ctl-x-r-map
+A sparse keymap for subcommands of the prefix @kbd{C-x r}.@*
+@xref{Registers,,, emacs, The GNU Emacs Manual}.
 
-@item dired-mode-map
-@vindex dired-mode-map
-@c A full keymap for @code{dired-mode} buffers.
-@code{dired-mode}バッファで使う完全なキーマップ。
+@item esc-map
+A full keymap for @kbd{ESC} (or @kbd{Meta}) commands.
 
-@item edit-abbrevs-map
-@vindex edit-abbrevs-map
-@c A sparse keymap used in @code{edit-abbrevs}.
-@code{edit-abbrevs}で使う疎なキーマップ。
-
-@item edit-tab-stops-map
-@vindex edit-tab-stops-map
-@c A sparse keymap used in @code{edit-tab-stops}.
-@code{edit-tab-stops}で使う疎なキーマップ。
-
-@item electric-buffer-menu-mode-map
-@vindex electric-buffer-menu-mode-map
-@c A full keymap used by Electric Buffer Menu mode.
-エレクトリックバッファメニュー（electric-buffer-menu）モードで
-使う完全なキーマップ。
-
-@item electric-history-map
-@vindex electric-history-map
-@c A full keymap used by Electric Command History mode.
-エレクトリックコマンド履歴（electric-command-history）モードで
-使う完全なキーマップ。
-
-@item emacs-lisp-mode-map
-@vindex emacs-lisp-mode-map
-@c A sparse keymap used by Emacs Lisp mode.
-emacs-lispモードで使う疎なキーマップ。
-
-@item facemenu-menu
-@vindex facemenu-menu
-@c The keymap that displays the Text Properties menu.
-テキスト属性メニューを表示するキーマップ。
-
-@item facemenu-background-menu
-@vindex facemenu-background-menu
-@c The keymap that displays the Background Color submenu of the Text
-@c Properties menu.
-テキスト属性メニューのBackground Colorサブメニューを表示するキーマップ。
-
-@item facemenu-face-menu
-@vindex facemenu-face-menu
-@c The keymap that displays the Face submenu of the Text Properties menu.
-テキスト属性メニューのFaceサブメニューを表示するキーマップ。
-
-@item facemenu-foreground-menu
-@vindex facemenu-foreground-menu
-@c The keymap that displays the Foreground Color submenu of the Text
-@c Properties menu.
-テキスト属性メニューのForeground Colorを表示するキーマップ。
-
-@item facemenu-indentation-menu
-@vindex facemenu-indentation-menu
-@c The keymap that displays the Indentation submenu of the Text Properties menu.
-テキスト属性メニューのIndentaionサブメニューを表示するキーマップ。
-
-@item facemenu-justification-menu
-@vindex facemenu-justification-menu
-@c The keymap that displays the Justification submenu of the Text
-@c Properties menu.
-テキスト属性メニューのJustificationサブメニューを表示するキーマップ。
-
-@item facemenu-special-menu
-@vindex facemenu-special-menu
-@c The keymap that displays the Special Props submenu of the Text
-@c Properties menu.
-テキスト属性メニューのSpecial Propsサブメニューを
-表示するキーマップ。
+@item facemenu-keymap
+A sparse keymap used for the @kbd{M-o} prefix key.
 
 @item function-key-map
-@c The keymap for translating keypad and function keys.@*
-@c If there are none, then it contains an empty sparse keymap.
-@c @xref{Translating Input}.
-キーパッドやファンクションキーの変換用のキーマップ。@*
-それらがなければ、この変数は空の疎なキーマップである。
-@pxref{Translating Input}。
+The parent keymap of all @code{local-function-key-map} (q.v.@:) instances.
 
+@ignore
+@c Doesn't exist.
 @item fundamental-mode-map
 @vindex fundamental-mode-map
-@c The local keymap for Fundamental mode.@*
-@c It is empty and should not be changed.
 基本（fundamental）モード用のローカルキーマップ。@*
 これは空であり、変更すべきでない。
+@end ignore
+
+@item global-map
+The full keymap containing default global key bindings.@*
+Modes should not modify the Global map.
+
+@item goto-map
+A sparse keymap used for the @kbd{M-g} prefix key.
+
+@item help-map
+A sparse keymap for the keys following the help character @kbd{C-h}.@*
+@xref{Help Functions}.
 
 @item Helper-help-map
-@vindex Helper-help-map
-@c A full keymap used by the help utility package.@*
-@c It has the same keymap in its value cell and in its function
-@c cell.
 ヘルプユーティリティパッケージが使う完全なキーマップ。@*
 この変数の値セルと関数セルには同一のキーマップが入っている。
 
-@item Info-edit-map
-@vindex Info-edit-map
-@c A sparse keymap used by the @kbd{e} command of Info.
-infoの@kbd{e}コマンドで使う疎なキーマップ。
-
-@item Info-mode-map
-@vindex Info-mode-map
-@c A sparse keymap containing Info commands.
-infoコマンドを収めた疎なキーマップ。
-
-@item isearch-mode-map
-@vindex isearch-mode-map
-@c A keymap that defines the characters you can type within incremental
-@c search.
-インクリメンタルサーチ中に打鍵できる文字を定義するキーマップ。
+@item input-decode-map
+The keymap for translating keypad and function keys.@*
+If there are none, then it contains an empty sparse keymap.
+@xref{Translation Keymaps}.
 
 @item key-translation-map
-@c A keymap for translating keys.  This one overrides ordinary key
-@c bindings, unlike @code{function-key-map}.  @xref{Translating Input}.
-キー変換用のキーマップ。
-これは、@code{function-key-map}と違って、
-もとのキーバインディングに優先する。
-@pxref{Translating Input}。
+キー変換用のキーマップ。これは、@code{function-key-map}と違って、もとのキー
+バインディングに優先する。@pxref{Translating Input}。
 
-@item lisp-interaction-mode-map
-@vindex lisp-interaction-mode-map
-@c A sparse keymap used by Lisp mode.
-Lispモードで使う疎なキーマップ。
+@item kmacro-keymap
+@vindex kmacro-keymap
+A sparse keymap for keys that follows the @kbd{C-x C-k} prefix search.@*
+@xref{Keyboard Macros,,, emacs, The GNU Emacs Manual}.
 
-@item lisp-mode-map
-@vindex lisp-mode-map
-@c A sparse keymap used by Lisp mode.
-Lispモードで使う疎なキーマップ。
+@item local-function-key-map
+The keymap for translating key sequences to preferred alternatives.@*
+If there are none, then it contains an empty sparse keymap.
+@xref{Translation Keymaps}.
 
-@item menu-bar-edit-menu
-@vindex menu-bar-edit-menu
-@c The keymap which displays the Edit menu in the menu bar.
-メニューバーのEditメニューを表示するキーマップ。
-
-@item menu-bar-files-menu
-@vindex menu-bar-files-menu
-@c The keymap which displays the Files menu in the menu bar.
-メニューバーのFilesメニューを表示するキーマップ。
-
-@item menu-bar-help-menu
-@vindex menu-bar-help-menu
-@c The keymap which displays the Help menu in the menu bar.
-メニューバーのHelpメニューを表示するキーマップ。
-
-@item menu-bar-mule-menu
-@tindex menu-bar-mule-menu
-@vindex menu-bar-mule-menu
-@c The keymap which displays the Mule menu in the menu bar.
-メニューバーのMuleメニューを表示するキーマップ。
-
-@item menu-bar-search-menu
-@vindex menu-bar-search-menu
-@c The keymap which displays the Search menu in the menu bar.
-メニューバーのSearchメニューを表示するキーマップ。
-
-@item menu-bar-tools-menu
+@item menu-bar-file-menu
+@itemx menu-bar-edit-menu
+@itemx menu-bar-options-menu
+@itemx global-buffers-menu-map
+@itemx menu-bar-tools-menu
+@itemx menu-bar-help-menu
+@cindex menu bar keymaps
+@vindex menu-bar-file-menu
+@vindex menu-bar-options-menu
+@vindex global-buffers-menu-map
 @vindex menu-bar-tools-menu
-@c The keymap which displays the Tools menu in the menu bar.
-メニューバーのToolsメニューを表示するキーマップ。
+@vindex menu-bar-help-menu
+These keymaps display the main, top-level menus in the menu bar.@*
+Some of them contain sub-menus.  For example, the Edit menu contains
+@code{menu-bar-search-menu}, etc.  @xref{Menu Bar}.
+@ignore
+TODO list all submenus?
+There are probably too many, and it would not be useful to do so, e.g.:
+The Edit menu includes @code{yank-menu}, @code{menu-bar-search-menu},
+@code{menu-bar-replace-menu}, @code{menu-bar-goto-menu},
+@code{menu-bar-bookmark-map}, and @code{facemenu-menu}.
+There is also mule-menu-keymap, set-coding-system-map,
+setup-language-environment-map, describe-language-environment-map,
+menu-bar-epatch-menu, menu-bar-ediff-merge-menu, menu-bar-ediff-menu, etc.
+@end ignore
+
+@item minibuffer-inactive-mode-map
+A full keymap used in the minibuffer when it is not active.@*
+@xref{Minibuffer Edit,, Editing in the Minibuffer, emacs, The GNU Emacs Manual}.
+
+@item mode-line-coding-system-map
+@itemx mode-line-input-method-map
+@itemx mode-line-column-line-number-mode-map
+@vindex mode-line-coding-system-map
+@vindex mode-line-input-method-map
+@vindex mode-line-column-line-number-mode-map
+These keymaps control various areas of the mode line.@*
+@xref{Mode Line Format}.
 
 @item mode-specific-map
-@c The keymap for characters following @kbd{C-c}.  Note, this is in the
-@c global map.  This map is not actually mode specific: its name was chosen
-@c to be informative for the user in @kbd{C-h b} (@code{display-bindings}),
-@c where it describes the main use of the @kbd{C-c} prefix key.
-@kbd{C-c}に続く文字用のキーマップ。
-これはグローバルマップの中にあることに注意。
-このマップは実際にはモード固有ではない。
-プレフィックスキー@kbd{C-c}の主要な使い方を記述する
-@kbd{C-h b}（@code{display-bindings}）において、
-ユーザーに有益なようにこの名前を選んだ。
+@kbd{C-c}に続く文字用のキーマップ。これはグローバルマップの中にあることに
+注意。このマップは実際にはモード固有ではない。プレフィックスキー
+@kbd{C-c}の主要な使い方を記述する@kbd{C-h b}（@code{display-bindings}）に
+おいて、ユーザーに有益なようにこの名前を選んだ。
 
-@item occur-mode-map
-@vindex occur-mode-map
-@c A local keymap used by Occur mode.
-出現（occur）モードで使うローカルキーマップ。
+@c FIXME - don't mention this one?
+@item mouse-appearance-menu-map
+@vindex mouse-appearance-menu-map
+A sparse keymap used for the @kbd{S-mouse-1} key.
+
+@item mule-keymap
+The global keymap used for the @kbd{C-x @key{RET}} prefix key.
+
+@item narrow-map
+@vindex narrow-map
+A sparse keymap for subcommands of the prefix @kbd{C-x n}.
+
+@item prog-mode-map
+The keymap used by Prog mode.@*
+@xref{Basic Major Modes}.
 
 @item query-replace-map
-@c A local keymap used for responses in @code{query-replace} and related
-@c commands; also for @code{y-or-n-p} and @code{map-y-or-n-p}.  The functions
-@c that use this map do not support prefix keys; they look up one event at a
-@c time.
-@code{query-replace}やその関連コマンドの応答用に使うキーマップ。
-@code{y-or-n-p}や@code{map-y-or-n-p}もこれを使う。
-このマップを使う関数は、プレフィックスキーを使わない。
-一度に1つのイベントを探す。
+@itemx multi-query-replace-map
+A sparse keymap used for responses in @code{query-replace} and related
+commands; also for @code{y-or-n-p} and @code{map-y-or-n-p}.  The functions
+that use this map do not support prefix keys; they look up one event at a
+time.  @code{multi-query-replace-map} extends @code{query-replace-map}
+for multi-buffer replacements.  @xref{Search and Replace, query-replace-map}.
 
-@item text-mode-map
-@vindex text-mode-map
-@c A sparse keymap used by Text mode.
-テキスト（text）モードで使う疎なキーマップ。
+@item search-map
+A sparse keymap that provides global bindings for search-related commands.
 
-@item view-mode-map
-@vindex view-mode-map
-@c A full keymap used by View mode.
-閲覧（view）モードで使う完全なキーマップ。
+@item special-mode-map
+The keymap used by Special mode.@*
+@xref{Basic Major Modes}.
+
+@item tool-bar-map
+The keymap defining the contents of the tool bar.@*
+@xref{Tool Bar}.
+
+@item universal-argument-map
+@vindex universal-argument-map
+A sparse keymap used while processing @kbd{C-u}.@*
+@xref{Prefix Command Arguments}.
+
+@item vc-prefix-map
+The global keymap used for the @kbd{C-x v} prefix key.
+
+@item x-alternatives-map
+@vindex x-alternatives-map
+@findex x-setup-function-keys
+A sparse keymap used to map certain keys under graphical frames.@*
+The function @code{x-setup-function-keys} uses this.
+
 @end table
